force-app/main/default/objects/TaskTypeConfig__mdt/TaskTypeConfig__mdt.object-meta.xml
<CustomObject>
    <label>Task Type Configuration</label>
    <pluralLabel>Task Type Configurations</pluralLabel>
</CustomObject>