force-app/main/default/objects/TaskTypeConfig__mdt/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <label>Status do Caso</label>
    <type>TextArea</type>
</CustomField>