force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskCustomerResponseTime__c.field-meta.xml
<CustomField>
    <fullName>TaskCustomerResponseTime__c</fullName>
    <label>Task Customer Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>