force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskInteractionType__c.field-meta.xml
<CustomField>
    <fullName>TaskInteractionType__c</fullName>
    <label>Task Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarefa simples</fullName>
                <default>true</default>
                <label>Tarefa simples</label>
            </value>
            <value>
                <fullName>Tarefa com resposta de cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>