force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskSLACommom__c.field-meta.xml
<CustomField>
    <fullName>TaskSLACommom__c</fullName>
    <label>Task SLA - Commom (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>