force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskSLAUrgent__c.field-meta.xml
<CustomField>
    <fullName>TaskSLAUrgent__c</fullName>
    <label>Task SLA - Urgent (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>