force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskSubject__c.field-meta.xml
<CustomField>
    <fullName>TaskSubject__c</fullName>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>