force-app/main/default/objects/TaskTypeConfig__mdt/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coletar com PP tipo de prestador</fullName>
                <default>true</default>
                <label>Coletar com PP tipo de prestador</label>
            </value>
            <value>
                <fullName>Contestação comunicar e revisar</fullName>
            </value>
            <value>
                <fullName>Comunicar resposta de processo ao IQ</fullName>
            </value>
            <value>
                <fullName>Aprovação de reembolso</fullName>
            </value>
            <value>
                <fullName>Criação de desconto na fatura</fullName>
            </value>
            <value>
                <fullName>Solicita ao PP aprovação do orçamento</fullName>
            </value>
            <value>
                <fullName>Comunica PP sobre falta de execução</fullName>
            </value>
            <value>
                <fullName>Coletar com IQ orçamentos</fullName>
            </value>
            <value>
                <fullName>Solicita ao IQ envio de orçamentos</fullName>
            </value>
            <value>
                <fullName>Registrar orçamento enviado pelo IQ</fullName>
            </value>
            <value>
                <fullName>Confirmar com IQ finalização da execução</fullName>
            </value>
            <value>
                <fullName>Comunicar PP quanto a execução do reparo</fullName>
            </value>
            <value>
                <fullName>Verificar pagamentos para analisar multa</fullName>
            </value>
            <value>
                <fullName>Solicitar envio de carta de trabalho</fullName>
            </value>
            <value>
                <fullName>Analisar se carta é valida</fullName>
            </value>
            <value>
                <fullName>Verificar valores e responsabilidades no contrato</fullName>
            </value>
            <value>
                <fullName>Checagem de cadastro</fullName>
            </value>
            <value>
                <fullName>Checagem de CHAT PP:IQ</fullName>
            </value>
            <value>
                <fullName>Tarefa de contato (call) com IQ: Onboarding IQ - Call</fullName>
            </value>
            <value>
                <fullName>Tarefa de contato (call) com PP: Onboarding PP - Call</fullName>
            </value>
            <value>
                <fullName>Tarefa de contato (chat) com IQ: Onboarding IQ - Chat</fullName>
            </value>
            <value>
                <fullName>Tarefa de FUP (chat) com IQ: Onboarding IQ - FUP CHAT</fullName>
            </value>
            <value>
                <fullName>Tarefa de contato (chat) com PP: Onboarding PP - Chat</fullName>
            </value>
            <value>
                <fullName>Tarefa de FUP (chat) com PP: Onboarding PP - FUP CHAT</fullName>
            </value>
            <value>
                <fullName>Tarefa com contato: Orientação para vistoria</fullName>
            </value>
            <value>
                <fullName>Tarefa: Verificar pendências - PP</fullName>
            </value>
            <value>
                <fullName>Tarefa com contato: Reforço de pagamentos e multa</fullName>
            </value>
            <value>
                <fullName>Tarefa: Verificar pendências - IQ</fullName>
            </value>
            <value>
                <fullName>Tarefa com contato: Orientação de pagamentos - PP</fullName>
            </value>
            <value>
                <fullName>Tarefa sem contato: Verificar reparos negociados - IQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>